# umodel-base-sre-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  skills
docs/: architecture.md
src/sre_agent/: app.py  skills_adapter.py
