[project]
name = "umodel-base-sre-agent"
version = "0.0.1"
description = "Multi-tenant SRE Agent platform built on AgentScope 2.0 — 三层 Agent + 应用ID/本体底图 + 确定性告警路由"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Liny" }]
license = { text = "TBD" }

dependencies = [
    # ===== Agent 框架 =====
    "agentscope>=2.0.1,<3.0",

    # ===== 平台层 (P1) =====
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",

    # ===== 数据层 (P1+) =====
    "redis>=5.0",
    "apscheduler>=3.10",

    # ===== 业务层 (P3) =====
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",

    # ===== 杂项 =====
    "structlog>=24.4",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.10",
]
obs = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "prometheus-client>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sre_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
